#
# project: ari
#
cmake_minimum_required(VERSION 2.8)

# include the fips main cmake file
get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
include("${FIPS_ROOT_DIR}/cmake/fips.cmake")

option(ARI_BUILD_TESTS "Build engine test projects" ON)
option(ARI_OPENGL "Use OpenGL as rendering backend" ON)
option(ARI_GLFW "Use glfw on desktop" OFF)

fips_setup(PROJECT ari)
    if (FIPS_EMSCRIPTEN)
        add_definitions(-DSOKOL_GLES3)
        set(slang "glsl300es:glsl100")
    elseif (FIPS_RASPBERRYPI)
        add_definitions(-DSOKOL_GLES2)
        set(slang "glsl100")
    elseif (FIPS_ANDROID)
        add_definitions(-DSOKOL_GLES3)
        set(slang "glsl300es")
    elseif (SOKOL_USE_D3D11)
        add_definitions(-DSOKOL_D3D11)
        set(slang "hlsl5")
    elseif (SOKOL_USE_METAL)
        add_definitions(-DSOKOL_METAL)
        if (FIPS_IOS)
            set(slang "metal_ios:metal_sim")
        else()
            set(slang "metal_macos")
        endif()
    else()
        if (FIPS_IOS)
            add_definitions(-DSOKOL_GLES3)
            set(slang "glsl300es")
        else()
            add_definitions(-DSOKOL_GLCORE33)
            set(slang "glsl330")
            set(ARI_BUILD_TESTS ON)
            set(ARI_OPENGL ON)
            set(ARI_GLFW ON)
        endif()
    endif()

    # POSIX platform defines
    if (FIPS_POSIX)
        add_definitions(-DARI_POSIX=1)
        if (FIPS_LINUX)
            add_definitions(-DARI_LINUX=1)
        endif()
        if (FIPS_OSX)
            add_definitions(-DARI_OSX=1)
            if (FIPS_MACOS)
                add_definitions(-DARI_MACOS=1)
            endif()
            if (FIPS_IOS)
                add_definitions(-DARI_IOS=1)
            endif()
        endif()
        if (FIPS_EMSCRIPTEN)
            add_definitions(-DARI_EMSCRIPTEN=1)
        endif()
        if (FIPS_ANDROID)
            add_definitions(-DARI_ANDROID=1)
        endif()
    endif()

    # Windows platform defines
    if (FIPS_WINDOWS)
        add_definitions(-DARI_WINDOWS=1)
        if (FIPS_WIN32)
            add_definitions(-DARI_WIN32=1)
        endif()
        if (FIPS_WIN64)
            add_definitions(-DARI_WIN64=1)
        endif()
    endif()

    set(CMAKE_CXX_STANDARD 17)

	include_directories(src)
    fips_add_subdirectory(src)

    if (ARI_BUILD_TESTS)
        fips_ide_group(Tests)
        fips_add_subdirectory(tests)
    endif()
fips_finish()
